--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/node": "^25.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
@@ -21,6 +22,7 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "graphile-migrate": "^1.4.1",
     "graphql": "^15.10.1",
